css tweaks to fix a bug in longer lists overlapping the footer

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -89,13 +89,8 @@
   bottom:0;
   color:#CFCFEA;
   border-top:2px solid #80D651;
+  margin-top:50px;
 }
-.footer-social {
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-}
-
 .footer-social-container{
   margin-top: 20px;
   color: #fff;
